# FlintZilla

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.in  NEWS  README.md  aclocal.m4  builder.sh  configure  configure.ac
config/: config.h.in
data/: Makefile.in  dllcopy.sh  dylibcopy.sh  filezilla.appdata.xml  install.nsi.in  makezip.sh.in
docs/: filezilla.man  fzdefaults.xml.man  fzputtygen.man  fzsftp.man
locales/: Makefile.in  an.po  ar.po  az.po  bg_BG.po  ca.po  ca_ES@valencia.po  co.po  cs_CZ.po  cy.po  da.po  de.po  el.po  es.po  et.po  eu.po  fa_IR.po  fi_FI.po  filezilla.pot  fr.po  gl_ES.po  he_IL.po  hr.po  hu_HU.po  hy.po  id_ID.po  it.po  ja_JP.po  kab.po  ko_KR.po  lo_LA.po  lt_LT.po  lv_LV.po  nb_NO.po  ne.po  nl.po  nn_NO.po  oc.po  pl_PL.po  pt_BR.po  (+14 more)
m4/: check_atomic.m4  check_libc++.m4  check_lrt_for_shm_open.m4  check_memfd_create.m4  fz_check_pugixml.m4
src/: Makefile.in  cli.c  gui.c  main.c  main.h
src/commonui/: Makefile.am  Makefile.in  chmod_data.h  fz_paths.cpp  local_recursive_operation.cpp  local_recursive_operation.h  login_manager.cpp  login_manager.h  options.cpp  options.h  registry.cpp  registry.h  remote_recursive_operation.cpp  remote_recursive_operation.h  site.cpp  site.h  site_manager.cpp  site_manager.h  updater.cpp  updater.h  xml_file.cpp
src/core/: bookmark.c  bookmark.h
src/dbus/: Makefile.in
src/engine/: Makefile.am  Makefile.in  aio.cpp  commands.cpp  controlsocket.cpp  controlsocket.h  engine.vcxproj  engine_options.cpp  engineprivate.cpp  local_path.cpp  optionsbase.cpp  reader.cpp  server.cpp  serverpath.cpp  string_reader.cpp  string_reader.h  writer.cpp
src/engine/ftp/: filetransfer.cpp  ftpcontrolsocket.cpp  ftpcontrolsocket.h  logon.cpp  (+2 more)
src/fzshellext/: Makefile.in  aclocal.m4  configure  configure.ac
src/include/: Makefile.am  Makefile.in  aio.h  commands.h  engine_options.h  local_path.h  notification.h  optionsbase.h  reader.h  server.h  writer.h
src/interface/: FileZilla.cpp  LocalListView.cpp  LocalListView.h  LocalTreeView.cpp  Mainfrm.cpp  Mainfrm.h  Makefile.am  Makefile.in  Options.cpp  Options.h  QueueView.cpp  QueueView.h  RemoteListView.cpp  RemoteListView.h  RemoteTreeView.cpp  StatusView.cpp  aboutdialog.cpp  asksavepassworddialog.cpp  asksavepassworddialog.h  asyncrequestqueue.cpp  aui_notebook_ex.cpp  auto_ascii_files.cpp  chmoddialog.cpp  clearprivatedata.cpp  commandqueue.cpp  commandqueue.h  context_control.cpp  dialogex.cpp  dialogex.h  dndobjects.cpp  dragdropmanager.cpp  drop_target_ex.cpp  drop_target_ex.h  edithandler.cpp  filelist_statusbar.cpp  filelist_statusbar.h  filelistctrl.cpp  filelistctrl.h  fzputtygen_interface.cpp  graphics.cpp  (+43 more)
src/pugixml/: Makefile.in  pugiconfig.hpp
src/putty/: Makefile.in  cmdgen.c  psftp.c
src/storj/: Makefile.in
tests/: Makefile.in  dirparsertest.cpp
(+47 files in other folders)
