# these are the headers for your project

noinst_HEADERS = \
	activity_logger.h \
	aio.h \
	commands.h \
	directorylisting.h \
	engine_context.h \
	engine_options.h \
	externalipresolver.h \
	FileZillaEngine.h \
	httpheaders.h \
	libfilezilla_engine.h \
	local_path.h \
	logging.h \
	misc.h \
	notification.h \
	optionsbase.h \
	reader.h \
	s3sse.h \
	server.h \
	serverpath.h \
	setup.h \
	sizeformatting_base.h \
	version.h \
	visibility.h \
	writer.h \
	xmlutils.h \
	xml_string_writer.h
